2011-07-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_say_mb_len, avt_say_mb):
	do the charset conversion directly in avt_say_mb_len
	=> optimization: far less mallocs

	* avatar.c (avt_tell_mb): call avt_tell_mb_len

2011-07-23  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_recode, avt_mb_decode, avt_mb_encode):
	make them more consistent
	callers adapted

	* avatar.c (avt_say, avt_say_len, avt_tell_len):
	support for UTF-16 surrogates

2011-07-22  Andreas K. Foerster  <info@akfoerster.de>

	* pascal/akfavatar.pas (Playing, ShowRawImage)
	(ImageMaxWidth, ImageMaxHeight, getBackgroundColor):
	new functions

	* pascal/akfavatar.pas:
	fix: never call Halt in IO-functions or initialization

2011-07-19  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c (avt_recode): new function
	(avt_set_title): adapted

	* lua/lua-avt.c (lavt_recode => avt.recode): new function

2011-07-18  Andreas K. Foerster  <info@akfoerster.de>

	* akfavatar.h, avatar.c, avatar-audio.c:
	remove all deprecated functions

	* akfavatar.h: use stdbool.h instead of avt_bool_t
	all callers adapted
	pascal/akfavatar.pas adapted

	* avatar.c (avt_iconv, avt_mb_decode, avt_mb_encode):
	use in more standardized way,
	make SDL_iconv the exception rather than the rule

------------------------------------------------------------------------

2011-07-14  Andreas K. Foerster  <info@akfoerster.de>

	* version 0.20.0 released

2011-07-13  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_ask): use avt_char; check if character is printable

	* avatar.c (avt_key): check if it's really a key

	* filechooser.c: mark parent directory with a double arrow up

2011-07-04  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_wait_button, avt_key):
	don't accept F11 unless reserve_single_keys is set

2011-07-02  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_text_background_color): fix
