@@ -6,6 +6,9 @@
 
 	* avatar.c (avt_tell_mb): call avt_tell_mb_len
 
+	* mingw/iconv.h, mingw/win_iconv.c:
+	remove const from **inbuf
+
 2011-07-23  Andreas K. Foerster  <info@akfoerster.de>
 
 	* akfavatar.h, avatar.c (avt_recode, avt_mb_decode, avt_mb_encode):
